--- a/templates/admin_products.html
+++ b/templates/admin_products.html
@@ -11,6 +11,16 @@
 <div class="mb-3">{{ form.image.label }} {{ form.image(class="form-control") }}</div>
 
     {{ form.submit(class="btn btn-primary") }}
+                  {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
   </form>
 
   <hr>
